complete phonebook exercise

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ part1/couseinfo/node_modules
 part1/unicafe/node_modules
 part1/anecdotes/node_modules
 part2/courseinfo-revised/node_modules
+part2/phonebook/node_modules
 
