--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ part1/unicafe/node_modules
 part1/anecdotes/node_modules
 part2/courseinfo-revised/node_modules
 part2/phonebook/node_modules
-
+part2/countries/node_modules
+part2/countries/.env
