--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ part2/courseinfo-revised/node_modules
 part2/phonebook/node_modules
 part2/countries/node_modules
 part2/countries/.env
+part3/firstsection/node_modules
